# mozg

mozg/: AUTHORS  ChangeLog  DOC_1  DOC_2  INSTALL  Makefile  Makefile.am-old  Makefile.in  Makefile.win  NEWS  README  acconfig.h  b  config.cache  config.status  configure  configure.in  configure.in-old  libtool
mozg/include/: Makefile  Makefile.am  Makefile.in
mozg/include/mozg/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  errorMessage.hh  errorMessage.hh.backup  limits.hh  limits.hh.backup  math.hh  math.hh.backup  matrix.hh  matrix.hh-backup  matrix.hh.backup  mozgMLP.hh  mozgMLP.hh.backup  mozgMLP_io.hh  mozgMLP_io.hh.backup  random.hh  random.hh.backup  struct_layer.hh  struct_layer.hh.backup  types.hh  types.hh.backup  vector.hh  vector.hh.backup  vector_matrix.hh  vector_matrix.hh.backup  vector_matrix_io.hh  vector_matrix_io.hh.backup
mozg/lib/: Makefile  Makefile.am  Makefile.in  Makefile.win  errorMessage.cc  errorMessage.cc.backup  limits.cc  limits.cc.backup  math.cc  math.cc.backup  matrix.cc  matrix.cc.backup  mozgMLP_1.cc  mozgMLP_1.cc.backup  mozgMLP_2.cc  mozgMLP_2.cc.backup  mozgMLP_3.cc  mozgMLP_3.cc.backup  mozgMLP_io.cc  mozgMLP_io.cc.backup  random.cc  random.cc.backup  vector.cc  vector.cc.backup  vector_matrix.cc  vector_matrix.cc.backup  vector_matrix_io.cc  vector_matrix_io.cc.backup
mozg/tests/: Makefile.win  t1.cc
