## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libmozg.la

libmozg_la_SOURCES = errorMessage.cc limits.cc math.cc matrix.cc mozgMLP_1.cc mozgMLP_2.cc mozgMLP_3.cc mozgMLP_io.cc random.cc vector.cc vector_matrix.cc vector_matrix_io.cc
libmozg_la_LDFLAGS = -version-info 0:0:0

INCLUDES = -I../include

